src/test/resources/invalid/semanticErr/extra/array/arraysOfDiffTypesEq.wacc
begin

int[] arr = [1,2,3];
char[] crr = ['c', 'r', 'r'];
println arr == crr

end